<resources>
    <string name="app_name">SPECIAL</string>
    <string name="strength">STRENGTH: </string>
    <string name="perception">PERCEPTION: </string>
    <string name="endurance">ENDURANCE: </string>
    <string name="charisma">CHARISMA: </string>
    <string name="intelligence">INTELLIGENCE: </string>
    <string name="agility">AGILITY: </string>
    <string name="luck">LUCK: </string>
    <string name="btnplus">+</string>
    <string name="btnminus">-</string>


    <string name="name">NAME: </string>
    <string name="gender">GENDER: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="perk">PERK SELECTION: </string>
    <string name="rifleman">Rifleman</string>
    <string name="barter">Barter</string>
    <string name="medic">Medic</string>
    <string name="pointsleft">POINTS LEFT: </string>
    <string name="summary">View Summary</string>


</resources>
