<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fallout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ga.leliadoura.dam2.special.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointsleft" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/perception"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/endurance"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/charisma"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/intelligence"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/agility"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/luck"
                android:textSize="@dimen/font"
                android:textStyle="bold" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="+" />

            <Button
                android:layout_width="@dimen/botons"
                android:layout_height="@dimen/botons"
                android:text="-" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="Name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/white"
                android:textColor="@color/black"
                android:inputType="text" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GENDER" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />

            </RadioGroup>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PERK SELECTION" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rifleman" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Barter" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medic" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
